[b]Version 0.6.4[/b]:

(2008-09-29)
 * Now the chapters on DVD should work again.
 * Reorganization in some data structures.

(2008-09-28)
 * Added an (experimental) generic code to manage chapters, instead of two 
   separate codes for mkv and DVDs. Seems to work well with mkv but it's
   still untested on DVDs.

(2008-09-27)
 * Added basic support for the tag ID_CHAPTERS, added in mplayer svn r27667.
   This makes things easier to know the number of chapters in a video.
   Don't know if it could cause a conflict with DVD chapters. Some code
   has still to be revised and modified.
 * Bugfix: if using "directx," the -colorkey option wasn't passed to mplayer
   (thus the video was black). Now this should be fixed.

(2008-09-26)
 * Added support for the new "pausing_keep_force" slave mode command prefix
   (added in mplayer r27665).
   This prefix really keeps the file paused after processing a slave command. 
   So now if you, for example, mute the audio when the video is paused it 
   won't advance one frame after it. It also keeps the video paused when you 
   take a screenshot (although you won't see the confirmation message until 
   playback resumes).
   There's also an option for smplayer.ini, use_pausing_keep_force. You can
   set to false if you find any trouble or prefer the old behaviour.

(2008-09-25)
 * Added the Galician translation, by Miguel Branco <mgl.branco@gmail.com>.


[b]Version 0.6.3[/b]:

(2008-09-24)
 * Added a new shortcut set (sda.keys) taken from 
   http://speeddemosarchive.com/forum/index.php/topic,7774.0.html, which you 
   can load in the shortcut editor in preferences.

(2008-09-23)
 * Added two icons for the mirror and flip actions (mirror.png and flip.png)
   taken from the Gimp.
 * Added a new option for smplayer.ini: default_size (section [gui]). It
   specifies the default size of the main window. Previously it was hardcoded
   (580x440).

(2008-09-22)